# yolov4_trt_ros

./: .gitignore  CMakeLists.txt  README.md  launch_demo_view.sh  trt_yolo_v4.py
config/: params.py.yaml
dependencies/: .install_pycuda.sh.swp
include/: .yolo_with_plugins.h.swp  common.h  common_struct.h  demo_view.h  display.h  http_stream.h  image_opencv.h  logging.h  trt_yolo_v4.h  usb_name.h  visualization.h  yolo_classes.h  yolo_classes_old.h  yolo_layer.h  yolo_with_plugins.h  yolov4_trt.h
launch/: demo_view.launch  run_yolov4_cpp.launch  run_yolov4_py.launch  video_source.launch  yolov4_416_bag.launch  yolov4_416_usb.launch  yolov4_trt.cpp.launch.py  yolov4_trt.launch  yolov4_trt.py.launch.py
lib/yaml-cpp/: libyaml-cpp.so.0.7
msg/: BoundingBox.msg  Detector2D.msg  Detector2DArray.msg
nodes/: test_node.cpp  yolov4_trt_node.cpp
other/: CMakeLists.txt  YEVY_MIPI_CAMERA.md  package.xml
other/launch/: run_2.launch
other/utils/: test.py
other/yolo/: yolov4-416.cfg  yolov4-608.cfg
src/: .trt_yolo_v4.cpp.swm  .trt_yolo_v4.cpp.swo  .trt_yolo_v4.cpp.swp  .yolo_with_plugins.cpp.swp  common_struct.cpp  demo_view.cpp  display.cpp  http_stream.cpp  image_opencv.cpp  node_video_source.cpp  test.cpp  trt_yolo_v4 copy 2.cpp  trt_yolo_v4 copy.cpp  trt_yolo_v4.cpp  trt_yolo_v4_compressed.cpp  trt_yolo_v4_delaytest.cpp  trt_yolo_v4_new.cpp  trt_yolo_v4_original.cpp  usb_name.cpp  yolo_layer.cu  yolo_with_plugins.cpp  yolov4_trt.cpp
utils/: display.py  yolo_classes.py  yolo_with_plugins.py
yolo/: bdd_wyf2.names
